Cleanup and split up crypto controller